--- a/testScroll/Base.lproj/Main.storyboard
+++ b/testScroll/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="testScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +17,62 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LzU-EL-AQ3">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="50" id="q7j-IA-b61">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q7j-IA-b61" id="Lie-zN-8LK">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.4431372549" green="0.67843137249999996" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="cOv-mk-6KS">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <scrollView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHE-ri-FIY">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Tl-w4-I4L">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="BKZ-fj-Dsh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1135124892" green="0.72576121790000003" blue="0.35298634159999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="cOv-mk-6KS" firstAttribute="centerX" secondItem="3Tl-w4-I4L" secondAttribute="centerX" id="1AX-m9-ObB"/>
+                            <constraint firstItem="3Tl-w4-I4L" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="4kk-B2-1jL"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="JHE-ri-FIY" secondAttribute="bottom" id="Abl-BE-AZ7"/>
+                            <constraint firstItem="3Tl-w4-I4L" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BIU-j6-0Dv"/>
+                            <constraint firstAttribute="trailing" secondItem="LzU-EL-AQ3" secondAttribute="trailing" id="HGN-f4-ocK"/>
+                            <constraint firstAttribute="trailing" secondItem="3Tl-w4-I4L" secondAttribute="trailing" id="Hxs-Xa-hiq"/>
+                            <constraint firstItem="cOv-mk-6KS" firstAttribute="top" secondItem="3Tl-w4-I4L" secondAttribute="bottom" constant="-44" id="JSc-1Y-bRE"/>
+                            <constraint firstItem="LzU-EL-AQ3" firstAttribute="top" secondItem="3Tl-w4-I4L" secondAttribute="bottom" id="P5E-sr-t4W"/>
+                            <constraint firstAttribute="trailing" secondItem="JHE-ri-FIY" secondAttribute="trailing" id="Uht-vE-CCq"/>
+                            <constraint firstItem="JHE-ri-FIY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yf4-qm-31n"/>
+                            <constraint firstItem="LzU-EL-AQ3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aby-mA-XGE"/>
+                            <constraint firstItem="JHE-ri-FIY" firstAttribute="top" secondItem="3Tl-w4-I4L" secondAttribute="bottom" id="cUc-Rj-ejp"/>
+                            <constraint firstItem="cOv-mk-6KS" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="fxI-Lw-ya0"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="LzU-EL-AQ3" secondAttribute="bottom" id="heJ-Ol-Oeg"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="cOv-mk-6KS" id="Pon-fM-94G"/>
+                        <outlet property="secretScrollView" destination="JHE-ri-FIY" id="wyu-3W-UkI"/>
+                        <outlet property="tableView" destination="LzU-EL-AQ3" id="VwV-Qz-LeM"/>
+                        <outlet property="tableViewTopSpaceConstraint" destination="P5E-sr-t4W" id="hXL-eu-sQc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
